--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular": "~1.3.9",
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.1",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "angular-route": "~1.3.9"
   }
 }
