--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.1",
     "underscore": "~1.7.0",
-    "angular-route": "~1.3.9"
+    "angular-route": "~1.3.9",
+    "angular-mocks": "~1.3.9"
   }
 }
