--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "bootstrap": "~3.3.1",
     "underscore": "~1.7.0",
     "angular-route": "~1.3.9",
-    "angular-mocks": "~1.3.9"
+    "angular-mocks": "~1.3.9",
+    "three.js": "*"
   }
 }
